@@ -4,12 +4,13 @@ import java.util.Locale;
 import java.util.Objects;
 import java.util.function.DoubleConsumer;
 import java.util.function.IntConsumer;
+
+import net.minecraft.client.gui.GuiGraphicsExtractor;
 import org.jspecify.annotations.NonNull;
 import com.qb20nh.cbbg.compat.iris.IrisCompat;
 import com.qb20nh.cbbg.config.CbbgConfig;
 import com.qb20nh.cbbg.render.CbbgDither;
 import com.qb20nh.cbbg.render.MainTargetFormatSupport;
-import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.AbstractSliderButton;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.CycleButton;
@@ -38,9 +39,9 @@ public final class CbbgConfigScreen extends Screen {
     private static final Tooltip TOOLTIP_GENERATE_STBN =
             Tooltip.create(Component.translatable("cbbg.config.tooltip.generate_stbn"));
 
-    private static void renderCard(GuiGraphics context, int x1, int y1, int x2, int y2) {
+    private static void renderCard(GuiGraphicsExtractor context, int x1, int y1, int x2, int y2) {
         context.fill(x1, y1, x2, y2, CARD_BG_COLOR);
-        context.renderOutline(x1, y1, x2 - x1, y2 - y1, CARD_BORDER_COLOR);
+        context.outline(x1, y1, x2 - x1, y2 - y1, CARD_BORDER_COLOR);
     }
 
     public CbbgConfigScreen(Screen parent) {
@@ -51,7 +52,7 @@ public final class CbbgConfigScreen extends Screen {
     @Override
     public void onClose() {
         if (this.parent != null) {
-            this.minecraft.setScreen(this.parent);
+            this.minecraft.setScreenAndShow(this.parent);
         } else {
             super.onClose();
         }
@@ -76,7 +77,7 @@ public final class CbbgConfigScreen extends Screen {
                 .addRenderableWidget(CycleButton.builder(this::getModeName, CbbgConfig.get().mode())
                         .withTooltip(this::getModeTooltip).withValues(CbbgConfig.Mode.values())
                         .create(cx - 100, yStart, 200, 20,
-                                Component.translatable("cbbg.config.mode"), (button, value) -> {
+                                Component.translatable("cbbg.config.mode"), (_, value) -> {
                                     // When cbbg disabled itself due to a render error, keep config
                                     // read-only.
                                     if (lockedByError) {
@@ -90,7 +91,7 @@ public final class CbbgConfigScreen extends Screen {
                 .builder(CbbgConfigScreen::getPixelFormatName, CbbgConfig.get().pixelFormat())
                 .withValues(CbbgConfig.PixelFormat.RGBA16F, CbbgConfig.PixelFormat.RGBA32F)
                 .create(cx - 100, yStart + 24, 200, 20,
-                        Component.translatable("cbbg.config.format"), (button, value) -> {
+                        Component.translatable("cbbg.config.format"), (_, value) -> {
                             if (lockedByError || lockedByUser) {
                                 return;
                             }
@@ -143,18 +144,6 @@ public final class CbbgConfigScreen extends Screen {
         seedEdit = new EditBox(this.font, cx - 100 + 40, y, 160, 20,
                 Component.translatable("cbbg.config.seed.label"));
         seedEdit.setValue(Objects.requireNonNull(Long.toString(CbbgConfig.get().stbnSeed())));
-        seedEdit.setFilter(s -> s.matches("-?\\d*")); // Only integers
-        seedEdit.setResponder(s -> {
-            if (lockedByError || lockedByUser) {
-                return;
-            }
-            try {
-                long seed = (s == null || s.isEmpty()) ? 0 : Long.parseLong(s);
-                CbbgConfig.setStbnSeed(seed);
-            } catch (NumberFormatException ignored) {
-                // Do nothing
-            }
-        });
         seedEdit.setTooltip(TOOLTIP_STBN_SEED);
         this.addRenderableWidget(seedEdit);
 
@@ -162,30 +151,35 @@ public final class CbbgConfigScreen extends Screen {
 
         // 6. Generate Button
         Button generateButton = this.addRenderableWidget(
-                Button.builder(Component.translatable("cbbg.config.button.generate_stbn"), b -> {
+                Button.builder(Component.translatable("cbbg.config.button.generate_stbn"), _ -> {
                     if (lockedByError || lockedByUser) {
                         return;
                     }
                     int stbnSize = CbbgConfig.get().stbnSize();
                     int stbnDepth = CbbgConfig.get().stbnDepth();
-                    long stbnSeed = CbbgConfig.get().stbnSeed();
+                    long stbnSeed;
+                    try {
+                        stbnSeed = parseSeed(seedEdit.getValue());
+                    } catch (NumberFormatException invalidSeed) {
+                        return;
+                    }
 
                     ConfirmScreen confirm = new ConfirmScreen(confirmed -> {
                         if (confirmed) {
                             CbbgDither.reloadStbn(true); // Force regeneration
                         }
-                        this.minecraft.setScreen(this);
+                        this.minecraft.setScreenAndShow(this);
                     }, Component.translatable("cbbg.config.confirm.regenerate_stbn.title"),
                             Component.translatable("cbbg.config.confirm.regenerate_stbn.message",
                                     stbnSize, stbnDepth, stbnSeed)) {
                         @Override
-                        public void renderBackground(@NonNull GuiGraphics context, int mouseX,
+                        public void extractBackground(@NonNull GuiGraphicsExtractor context, int mouseX,
                                 int mouseY, float partialTick) {
-                            CbbgConfigScreen.this.renderSafeBackground(context, partialTick);
+                            CbbgConfigScreen.this.extractSafeBackground(context, partialTick);
                         }
 
                         @Override
-                        public void render(@NonNull GuiGraphics context, int mouseX, int mouseY,
+                        public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY,
                                 float partialTick) {
                             // Draw the same card styling behind the confirm dialog UI.
                             final int padX = 12;
@@ -198,18 +192,32 @@ public final class CbbgConfigScreen extends Screen {
                                     this.layout.getY() + this.layout.getHeight() + padY);
                             renderCard(context, x1, y1, x2, y2);
 
-                            super.render(context, mouseX, mouseY, partialTick);
+                            super.extractRenderState(context, mouseX, mouseY, partialTick);
                         }
                     };
-                    this.minecraft.setScreen(confirm);
+                    this.minecraft.setScreenAndShow(confirm);
                 }).bounds(cx - 100, y, 200, 20).tooltip(TOOLTIP_GENERATE_STBN).build());
+
+        seedEdit.setResponder(s -> {
+            if (lockedByError || lockedByUser) {
+                return;
+            }
+            try {
+                CbbgConfig.setStbnSeed(parseSeed(s));
+                seedEdit.setTextColor(0xFFE0E0E0);
+                generateButton.active = true;
+            } catch (NumberFormatException invalidSeed) {
+                seedEdit.setTextColor(0xFFFF5555);
+                generateButton.active = false;
+            }
+        });
 
         y += 28;
 
         // 7. Notifications
         CycleButton<Boolean> chatNotifyButton = this.addRenderableWidget(
                 CycleButton.onOffBuilder(CbbgConfig.get().notifyChat()).create(cx - 100, y, 98, 20,
-                        Component.translatable("cbbg.config.notify.chat"), (b, val) -> {
+                        Component.translatable("cbbg.config.notify.chat"), (_, val) -> {
                             if (lockedByError || lockedByUser) {
                                 return;
                             }
@@ -218,7 +226,7 @@ public final class CbbgConfigScreen extends Screen {
 
         CycleButton<Boolean> toastNotifyButton = this.addRenderableWidget(
                 CycleButton.onOffBuilder(CbbgConfig.get().notifyToast()).create(cx + 2, y, 98, 20,
-                        Component.translatable("cbbg.config.notify.toast"), (b, val) -> {
+                        Component.translatable("cbbg.config.notify.toast"), (_, val) -> {
                             if (lockedByError || lockedByUser) {
                                 return;
                             }
@@ -229,7 +237,7 @@ public final class CbbgConfigScreen extends Screen {
 
         // 8. Done Button
         this.addRenderableWidget(Button
-                .builder(Component.translatable("cbbg.config.button.done"), b -> this.onClose())
+                .builder(Component.translatable("cbbg.config.button.done"), _ -> this.onClose())
                 .bounds(cx - 100, y, 200, 20).build());
 
         // UI lock:
@@ -260,6 +268,13 @@ public final class CbbgConfigScreen extends Screen {
         }
     }
 
+    static long parseSeed(String text) {
+        if (!text.matches("-?[0-9]*")) {
+            throw new NumberFormatException("Seed must be an integer");
+        }
+        return text.isEmpty() ? 0 : Long.parseLong(text);
+    }
+
     private Component getModeName(CbbgConfig.Mode mode) {
         return switch (mode) {
             case ENABLED -> Component.translatable("cbbg.mode.enabled");
@@ -278,22 +293,22 @@ public final class CbbgConfigScreen extends Screen {
     }
 
     @Override
-    public void renderBackground(@NonNull GuiGraphics context, int mouseX, int mouseY,
+    public void extractBackground(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY,
             float partialTick) {
-        this.renderSafeBackground(context, partialTick);
+        this.extractSafeBackground(context, partialTick);
     }
 
-    private void renderSafeBackground(@NonNull GuiGraphics context, float partialTick) {
+    private void extractSafeBackground(@NonNull GuiGraphicsExtractor context, float partialTick) {
         if (this.minecraft.level != null) {
-            this.renderTransparentBackground(context);
+            this.extractTransparentBackground(context);
         } else {
-            this.renderPanorama(context, partialTick);
-            this.renderMenuBackground(context);
+            this.extractPanorama(context, partialTick);
+            this.extractMenuBackground(context);
         }
     }
 
     @Override
-    public void render(@NonNull GuiGraphics context, int mouseX, int mouseY, float partialTick) {
+    public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY, float partialTick) {
         // Card background
         int cx = this.width / 2;
         int cy = this.height / 2;
@@ -305,12 +320,12 @@ public final class CbbgConfigScreen extends Screen {
         renderCard(context, x1, y1, x2, y2);
 
         // Header
-        context.drawCenteredString(this.font, this.title, cx, y1 + 10, 0xFFFFFFFF);
+        context.centeredText(this.font, this.title, cx, y1 + 10, 0xFFFFFFFF);
 
         // Seed Label
         // Layout: yStart + 48 (strength) + 24 (size/depth) + 24 (seed)
         int ySeed = cy - CARD_HEIGHT / 2 + 30 + 48 + 24 + 24 + 6;
-        context.drawString(this.font,
+        context.text(this.font,
                 Component.translatable("cbbg.config.seed.label").append(Component.literal(":")),
                 cx - 100, ySeed, 0xFFAAAAAA, false);
 
@@ -318,28 +333,28 @@ public final class CbbgConfigScreen extends Screen {
         int statusY = y2 - 36;
         final boolean irisActive = isIrisActive();
         if (CbbgDither.isDisabled()) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.disabled_render_error"), cx, statusY,
                     0xFFFF5555);
             statusY += 12;
         }
         if (MainTargetFormatSupport.hasDetectedNoFloatFormats()) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.no_float_formats"), cx, statusY,
                     0xFFFFAA00);
             statusY += 12;
         }
         if (irisActive) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.iris_active"), cx, statusY,
                     0xFFFFAA00);
         } else if (CbbgConfig.get().mode() == CbbgConfig.Mode.DISABLED) {
-            context.drawCenteredString(this.font,
+            context.centeredText(this.font,
                     Component.translatable("cbbg.config.status.mode_disabled"), cx, statusY,
                     0xFFAAAAAA);
         }
 
-        super.render(context, mouseX, mouseY, partialTick);
+        super.extractRenderState(context, mouseX, mouseY, partialTick);
     }
 
     // Custom Slider for Power-of-Two values
@@ -402,7 +417,7 @@ public final class CbbgConfigScreen extends Screen {
             this.max = max;
             this.setter = setter;
 
-            float clamped = Math.min(max, Math.max(min, currentValue));
+            float clamped = Math.clamp(currentValue, min, max);
             this.value = (clamped - min) / (max - min);
             this.updateMessage();
         }
